// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OrderItemsList stories snapshot > Default story renders and matches snapshot 1`] = `
<ul
  class="space-y-4"
>
  <li>
    <div
      class="flex flex-col gap-4 rounded-none border border-muted-foreground/20 bg-card p-4 sm:flex-row sm:items-center"
    >
      <div
        class="bg-muted flex-shrink-0 flex items-center justify-center aspect-square overflow-hidden h-24 w-24 rounded-none"
      >
        <img
          alt="Sweater"
          class="h-full w-full object-contain"
          src="https://edge.disstg.commercecloud.salesforce.com/dw/image/v2/ZZRF_001/on/demandware.static/-/Sites-apparel-m-catalog/default/dw97734cd6/images/large/PG.33330DAN84Q.CHARCWL.PZ.webp?sfrm=jpg&q=70"
        />
      </div>
      <div
        class="min-w-0 flex-1 space-y-1"
      >
        <div
          class="mb-4 flex items-start gap-2 min-w-0"
        >
          <h2
            class="font-semibold tracking-tight text-left text-xl min-w-0 flex-1 leading-tight"
          >
            <a
              class="text-foreground hover:text-primary block break-words"
              data-discover="true"
              href="/product/701643108633M"
              title="Sweater"
            >
              Sweater
            </a>
          </h2>
        </div>
        <div>
          <div
            class="text-sm text-muted-foreground space-y-1 mb-1"
          >
            <div>
              Size
              : 
              M
            </div>
            <div>
              Color
              : 
              Navy
            </div>
          </div>
        </div>
        <p
          class="text-xs text-muted-foreground"
        >
          Qty: 3
        </p>
      </div>
      <div
        class="flex shrink-0 flex-col items-end gap-1 sm:self-start"
      >
        <div
          class="items-center gap-2"
        >
          <span
            aria-label="Current price: $61.99"
            aria-live="polite"
            class="leading-7 [&:not(:first-child)]:mt-6 text-left font-semibold"
          >
            $61.99
          </span>
          <span
            aria-atomic="true"
            aria-live="polite"
            class="sr-only"
          >
            Sweater
            Current price: $61.99
          </span>
           
          <span
            aria-label="List price: $185.97"
            class="leading-7 [&:not(:first-child)]:mt-6 text-left text-muted-foreground line-through"
          >
            $185.97
          </span>
          <span
            aria-atomic="true"
            aria-live="polite"
            class="sr-only"
          >
            Sweater
            List price: $185.97
          </span>
        </div>
        <a
          class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive h-8 gap-1.5 px-3 has-[>svg]:px-2.5 rounded-none bg-foreground text-background hover:bg-foreground/90 text-xs"
          data-discover="true"
          data-size="sm"
          data-slot="button"
          data-variant="default"
          href="/product/701643108633M"
        >
          Buy Again
        </a>
      </div>
    </div>
  </li>
</ul>
`;

exports[`OrderItemsList stories snapshot > Empty story renders and matches snapshot 1`] = `
<p
  class="leading-7 [&:not(:first-child)]:mt-6 text-left text-muted-foreground"
>
  No items.
</p>
`;

exports[`OrderItemsList stories snapshot > MultipleItems story renders and matches snapshot 1`] = `
<ul
  class="space-y-4"
>
  <li>
    <div
      class="flex flex-col gap-4 rounded-none border border-muted-foreground/20 bg-card p-4 sm:flex-row sm:items-center"
    >
      <div
        class="bg-muted flex-shrink-0 flex items-center justify-center aspect-square overflow-hidden h-24 w-24 rounded-none"
      >
        <div
          class="w-full h-full bg-muted rounded"
        />
      </div>
      <div
        class="min-w-0 flex-1 space-y-1"
      >
        <div
          class="mb-4 flex items-start gap-2 min-w-0"
        >
          <h2
            class="font-semibold tracking-tight text-left text-xl min-w-0 flex-1 leading-tight"
          >
            <a
              class="text-foreground hover:text-primary block break-words"
              data-discover="true"
              href="/"
              title="Product One"
            >
              Product One
            </a>
          </h2>
        </div>
        <div />
        <p
          class="text-xs text-muted-foreground"
        >
          Qty: 1
        </p>
      </div>
      <div
        class="flex shrink-0 flex-col items-end gap-1 sm:self-start"
      >
        <div
          class="items-center gap-2"
        >
          <span
            aria-label="Current price: $10.00"
            aria-live="polite"
            class="leading-7 [&:not(:first-child)]:mt-6 text-left font-semibold"
          >
            $10.00
          </span>
          <span
            aria-atomic="true"
            aria-live="polite"
            class="sr-only"
          >
            Product One
            Current price: $10.00
          </span>
           
        </div>
        <a
          class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive h-8 gap-1.5 px-3 has-[>svg]:px-2.5 rounded-none bg-foreground text-background hover:bg-foreground/90 text-xs"
          data-discover="true"
          data-size="sm"
          data-slot="button"
          data-variant="default"
          href="/product/prod-1"
        >
          Buy Again
        </a>
      </div>
    </div>
  </li>
  <li>
    <div
      class="flex flex-col gap-4 rounded-none border border-muted-foreground/20 bg-card p-4 sm:flex-row sm:items-center"
    >
      <div
        class="bg-muted flex-shrink-0 flex items-center justify-center aspect-square overflow-hidden h-24 w-24 rounded-none"
      >
        <div
          class="w-full h-full bg-muted rounded"
        />
      </div>
      <div
        class="min-w-0 flex-1 space-y-1"
      >
        <div
          class="mb-4 flex items-start gap-2 min-w-0"
        >
          <h2
            class="font-semibold tracking-tight text-left text-xl min-w-0 flex-1 leading-tight"
          >
            <a
              class="text-foreground hover:text-primary block break-words"
              data-discover="true"
              href="/"
              title="Product Two"
            >
              Product Two
            </a>
          </h2>
        </div>
        <div />
        <p
          class="text-xs text-muted-foreground"
        >
          Qty: 1
        </p>
      </div>
      <div
        class="flex shrink-0 flex-col items-end gap-1 sm:self-start"
      >
        <div
          class="items-center gap-2"
        >
          <span
            aria-label="Current price: $20.00"
            aria-live="polite"
            class="leading-7 [&:not(:first-child)]:mt-6 text-left font-semibold"
          >
            $20.00
          </span>
          <span
            aria-atomic="true"
            aria-live="polite"
            class="sr-only"
          >
            Product Two
            Current price: $20.00
          </span>
           
        </div>
        <a
          class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive h-8 gap-1.5 px-3 has-[>svg]:px-2.5 rounded-none bg-foreground text-background hover:bg-foreground/90 text-xs"
          data-discover="true"
          data-size="sm"
          data-slot="button"
          data-variant="default"
          href="/product/prod-2"
        >
          Buy Again
        </a>
      </div>
    </div>
  </li>
</ul>
`;
